k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sentiment-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: gidrolat.ru
    http:
      paths:
      - path: /process
        pathType: Prefix
        backend:
          service:
            name: sentiment-service
            port:
              number: 8000
